--- a/data/projects.json
+++ b/data/projects.json
@@ -60,7 +60,7 @@
   "<br><br><strong>Plan and process</strong><br>",
   "<span class=\"numbered-line\"><span class=\"num\">1.</span> Empathise: Ran usability tests on the existing search experience, collected questionnaires, and spoke with customer support, product and customer-facing teams to surface recurring search pain points and expectations.</span><br>",
   "<span class=\"numbered-line\"><span class=\"num\">2.</span> Discover: Analysed Hub search data (such as volume of searches and queries with no results) and mapped how users moved between search, folders and smart folders to understand where they got stuck or gave up.</span><br>",
-  "<span class=\"numbered-line\"><span class=\"num\">3.</span> Ideate: Benchmarked search and refinement patterns from tools like Jira, LinkedIn, job boards and e‑commerce sites, then adapted those paradigms to Signavio's attribute-rich process content and metadata model.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">3.</span> Ideate: Benchmarked search and refinement patterns from tools like Jira, LinkedIn, job boards and e-commerce sites, then adapted those paradigms to Signavio's attribute-rich process content and metadata model.</span><br>",
   "<span class=\"numbered-line\"><span class=\"num\">4.</span> Validate: Tested early flows and interaction patterns for simple and advanced search with users, iterating on filter discoverability, criteria tags and result layouts based on observed confusion, errors and edge cases.</span><br>",
 
   "<br><br><strong>Problems we found</strong><br>",
@@ -96,7 +96,7 @@
     "id": "racespace",
 	  "gallery_desc": "An interactive sales dashboard for Formula-1 teams",
     "shortdesc": "An interactive sales dashboard for Formula-1 teams that visualizes car ad space, highlights coverage gaps, and helps manage bidding conflicts, enabling faster, smarter selling and sponsorship decisions at a glance.",
-    "desc": "About this project: this was an interactive sales dashboard for Formula 1 teams that visualizes car ad space, highlights coverage gaps, and helps manage bidding conflicts, enabling faster, smarter selling and sponsorship decisions at a glance.",
+    "desc": "<strong>RaceSpace</strong> is an interactive sales platform for Formula 1 teams that maps every advertising slot on the car, surfaces inventory gaps and overlaps, and clarifies bidding conflicts so commercial teams can price, package, and sell sponsorships more confidently and much faster.",
     "link": "project.php?id=racespace",
     "title_bold": "RaceSpace",
     "title_regular": "F1 ad sales Platform",
@@ -111,7 +111,7 @@
     "id": "suite-as-pie",
 	  "gallery_desc": "Effortless in-room ordering for hotel guests",
     "shortdesc": "Effortless in-room ordering for hotel guests. Suite as pie streamlines room service requests, enhancing guest comfort and hotel efficiency with a beautifully intuitive interface.",
-    "desc": "About this project: this is an Effortless in-room ordering for hotel guests—RoomEase streamlines room service requests, enhancing guest comfort and hotel efficiency with a beautifully intuitive interface.",
+    "desc": "<strong>Suite as Pie</strong> is a mobile hotel service app that lets guests browse, customise, and order in-room services in just a few taps, while giving hotel staff a clear, real-time view of incoming requests so they can fulfil orders faster and more accurately.",
     "link": "project.php?id=suite-as-pie",
     "title_bold": "Suite as Pie",
     "title_regular": "hotel service app",
@@ -126,7 +126,7 @@
     "id": "hp",
     "shortdesc": "HP short description.",
 	  "gallery_desc": "Intuitive printer touchscreen interface design",
-    "desc": "About this project: this is an HP project.",
+    "desc": "This was a multi-year, engagement as part of an external design team supporting <strong>HP</strong> in developing the 19\" touchscreen interface used by professional print operators. The work combined UX for complex workflows with a deep understanding of how the printers function mechanically and operationally, so the UI could expose the right controls and feedback for expert users without adding friction.",
     "link": "project.php?id=hp",
     "title_bold": "HP Printer",
     "title_regular": " User Interface",
@@ -141,7 +141,7 @@
     "id": "olamundo",
 	  "gallery_desc": "Synced family communication for non-verbal kids",
     "shortdesc": "Olamundo short description.",
-    "desc": "About this project: this is an Olamundo project.",
+    "desc": "<strong>Ola Mundo</strong> is a child-centred communication app that uses symbol based messages to help nonverbal or minimally verbal children stay in touch with their parents, siblings, and therapists whether they are in the same room or far away.",
     "link": "project.php?id=olamundo",
     "title_bold": "Olamundo",
     "title_regular": "communication app",
@@ -156,7 +156,7 @@
    "id": "safebreach",
 	  "gallery_desc": "Pioneering enterprise breach simulation platform",
     "shortdesc": "safebreach short description.",
-    "desc": "About this project: this is an safebreach project.",
+    "desc": "<strong>SafeBreach</strong> is a breach and attack simulation platform that continuously runs real world attack scenarios to show security teams where their controls fail and how to fix the most critical gaps. As the company's first designer over its first three years, I owned all design work end to end, from product UX flows and dense data-heavy UIs to brand and marketing assets, helping shape how complex security findings are visualised and prioritised for customers.",
     "link": "project.php?id=safebreach",
     "title_bold": "SafeBreach",
     "title_regular": "cybersecurity",
@@ -203,7 +203,7 @@
     "id": "sparkly",
 	  "gallery_desc": "Vector illustration creative exercise",
     "shortdesc": "sparkly short description.",
-    "desc": "About this project: this is a sparkly project.",
+    "desc": "<strong>Sparkly!</strong> is a self initiated poster that pushes pure vector illustration to its limits, using only shapes, colour, and composition (no raster effects) to demonstrate control over detail, lighting, and depth in a scalable, print ready artwork.",
     "link": "project.php?id=sparkly",
     "title_bold": "Sparkly!",
     "title_regular": "purely Vector graphics",
