pps descriptions fix bold

--- a/data/projects.json
+++ b/data/projects.json
@@ -6,7 +6,7 @@
 "desc": [
   "<p><strong>EQCapture</strong> is a mobile app that replaces paper, photos and spreadsheets with a single workflow for on-site equipment surveys in large commercial buildings. It guides surveyors through complex properties, captures equipment details in context and syncs everything directly into the BuildingMinds digital twin.</p>",
 
-  "<p><strong class=\"section-label\">My role</strong><br>As Head of Design for BuildingMinds' App Factory, I led EQCapture as part of a core three-person team. I owned end-to-end design: field research with surveyors in Hamburg and Frankfurt, UX/UI and design system work, usability testing and stakeholder presentations, while mentoring the Product Manager in user-centred methods.</p>",
+  "<p><strong class=\"section-label\">Plan and process</strong></p>", "As Head of Design for BuildingMinds' App Factory, I led EQCapture as part of a core three-person team. I owned end-to-end design: field research with surveyors in Hamburg and Frankfurt, UX/UI and design system work, usability testing and stakeholder presentations, while mentoring the Product Manager in user-centred methods.</p>",
 
   "<p><strong class=\"section-label\">Project goals</strong></p>",
   "<ol>",
